--- a/web.html
+++ b/web.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Unique Web Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-        <h1>Welcome to My Web Page</h1>
+        <h1>My Unique Website</h1>
+        <p>A simple, clean, and mobile-friendly layout</p>
     </header>
+
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#stories">Stories</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section.</p>
-        </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>This is the about section.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>This is the contact section.</p>
-        </section>
-    </main>
+
+    <section id="content">
+        <article>
+            <h2>Welcome!</h2>
+            <p>This is a unique web layout designed for easy navigation and readability.</p>
+            <h3>Featured Story</h3>
+            <p>Here is where featured content could go, such as the latest updates or articles.</p>
+        </article>
+
+        <aside>
+            <h3>Sidebar</h3>
+            <ul>
+                <li><a href="#">Latest Updates</a></li>
+                <li><a href="#">Popular Stories</a></li>
+                <li><a href="#">Community</a></li>
+            </ul>
+        </aside>
+    </section>
+
     <footer>
-        <p>&copy; 2023 My Web Page</p>
+        <p>&copy; 2025 My Unique Website | All Rights Reserved</p>
     </footer>
+
 </body>
 </html>
