added home, about, posts html

--- a/web.html
+++ b/web.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASEZSO</title>
+    <title>Web Activity</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="navbar">
+        <h1>ASEZSO</h1>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="posts.html">Posts</a>
+        </nav>
     <aside>
         <h2>Profile</h2>
         <img src="c:\Users\63926\USTP\IT-2R4\Web Systems and Technologies\IMG_20240323_211950.jpg" alt="Profile Picture">
