just added a < and other

--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
         <title>Web Activity</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    h2>Posts</h2>
+    <h2>Posts</h2>
             <article>
                 <img src="sunset.jpg" alt="The Sunset">
                 <p>The Sunset. - Yuson, A. X.</p>
